--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Estudamais.tech – Dashboard Inteligente</title>
 
-    <meta property="og:title" content="ola-sparkling-vision" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta name="description" content="Dashboard inteligente da Estudamais.tech para acompanhar cursos, interesses e benefícios personalizados." />
+    <meta name="author" content="Estudamais.tech" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Estudamais.tech – Dashboard Inteligente" />
+    <meta property="og:description" content="Gerencie seus estudos e visualize seus ganhos com a plataforma da Estudamais.tech." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://estudamais.tech" />
+    <meta property="og:image" content="https://estudamais.tech/assets/opengraph-image.png" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@estudamaistech_" />
+    <meta name="twitter:image" content="https://estudamais.tech/assets/opengraph-image.png" />
+
+    <!-- SEO social extra -->
+    <link rel="me" href="https://www.linkedin.com/in/estudamais-tech-18606536b/" />
+    <link rel="me" href="https://www.instagram.com/estudamaistech_/" />
   </head>
 
   <body>
